Relion is ready for production

--- a/form.yml.erb
+++ b/form.yml.erb
@@ -38,7 +38,7 @@ attributes:
     label: "Relion version"
     help: "What version of Relion would you like to launch"
     options:
-      - [ "Relion 5.0", "/software/openondemand/matlab/matlab-ood.sif" ]
+      - [ "Relion 5.0 6331fe6", "relion/5.0" ]
 
   relion_project_directory:
     label: "RELION project directory"
