--- a/form.yml.erb
+++ b/form.yml.erb
@@ -8,6 +8,8 @@ form:
   # What version of the code do you want to run
   - version
   - relion_project_directory
+  # determines the size of your desktop window
+  - vnc_resolution
   # This allows the user to select which partition they submit to
   - slurm_partition
   # This allows a user to request a GPU
@@ -31,6 +33,7 @@ form:
   # these variables are for the JavaScript
   - raw_data
   - raw_group_data
+  - bc_vnc_resolution
 
 attributes:
   version:
@@ -45,6 +48,30 @@ attributes:
     value: ""
     help: |
       If you leave this blank, the RELION project directory will default to your HOME folder.
+
+  vnc_resolution:
+    label: "Resolution"
+    required: true
+    widget: "select"
+    value: "2560x1600"
+    options:
+      - ["2560x1600","2560x1600"]
+      - ["2560x1440","2560x1440"]
+      - ["1920x1200","1920x1200"]
+      - ["1920x1080","1920x1080"]
+      - ["1600x1200","1600x1200"]
+      - ["1280x1024","1280x1024"]
+      - ["1280x960","1280x960"]
+      - ["1024x768","1024x768"]
+      - ["800x600","800x600"]
+    help: |
+      The resolution setting (in pixels width x height) for the VNC connection.
+
+  bc_vnc_resolution:
+    required: true
+    value: "2560x1600"
+    help: |
+      The resolution setting (in pixels width x height) for the VNC connection.
 
   bc_num_hours:
     label: "Wall Time (in number of hours)"
