--- a/submit.yml.erb
+++ b/submit.yml.erb
@@ -17,17 +17,31 @@ batch_connect:
     %s
     CTRSCRIPT
 
-    # What container are we using
-    export container_image="/software/openondemand/matlab/matlab-ood.sif"
+    # What is the OS *of the host*
+    HOST_OS=`uname -r`
+    # Where is this container
+    if [[ $HOST_OS =~ "el8" ]]; then
+        export container_image=/software/rhel8/quest_ondemand/desktops/xfce/quest-ood-xfce-desktop.sif
+    elif [[ $HOST_OS =~ "el7" ]]; then
+        export container_image=/software/openondemand/matlab/matlab-ood.sif
+    else
+        echo "Host OS not recognized, no container found"
+    fi
 
     # All our software in /software so have to bind that
     export SING_BINDS="--bind /software:/software --bind /hpc/software:/hpc/software"
 
     ## bind some extra stuff to be able to talk to slurm from within the container
-    export SING_BINDS="$SING_BINDS -B /usr/lpp/mmfs/lib/libgpfs.so -B /lib64/libgpfs.so -B /etc/passwd -B /etc/slurm -B `which sbatch ` -B `which srun ` -B `which sacct ` -B `which scontrol ` -B `which salloc ` -B `which scancel ` -B `which squeue ` -B /usr/lib64/slurm/ -B /usr/lib64/libmunge.so.2 -B /usr/lib64/libmunge.so.2.0.0 -B /usr/lib64/libpmi2.so -B /usr/lib64/libpmi2.so.0 -B /usr/lib64/libpmi2.so.0.0.0 -B /usr/lib64/libpmi.so -B /usr/lib64/libpmi.so.0 -B /usr/lib64/libpmi.so.0.0.0 -B /run"
+    export SING_BINDS="$SING_BINDS  -B /usr/lib64/libucp.so.0 -B /usr/lib64/libucp.so.0.0.0  -B /usr/lib64/libuct.so.0 -B /usr/lib64/libuct.so.0.0.0  -B /usr/lib64/libucm.so.0 -B /usr/lib64/libucm.so.0.0.0 -B /usr/lib64/libucs.so.0 -B /usr/lib64/libucs.so.0.0.0 -B /usr/lpp/mmfs/lib/libgpfs.so -B /lib64/libgpfs.so -B /etc/passwd -B /etc/slurm -B `which sbatch ` -B `which srun ` -B `which sacct ` -B `which scontrol ` -B `which salloc ` -B `which scancel ` -B `which squeue ` -B /usr/lib64/slurm/ -B /usr/lib64/libmunge.so.2 -B /usr/lib64/libmunge.so.2.0.0 -B /usr/lib64/libpmi2.so -B /usr/lib64/libpmi2.so.0 -B /usr/lib64/libpmi2.so.0.0.0 -B /usr/lib64/libpmi.so -B /usr/lib64/libpmi.so.0 -B /usr/lib64/libpmi.so.0.0.0 -B /run"
 
     ## bind some extra stuff to be able to talk to slurm from within the container
-    export SING_BINDS="$SING_BINDS -B /usr/local/pmix -B /usr/local/hwloc -B /usr/local/ucx-1.13.0 -B /usr/local/ucx-1.10.0 -B /usr/local/ucx-1.8.1 -B /usr/local/spack -B /usr/local/spack_v20d1 -B /usr/local/libevent/ " 
+    if [[ $HOST_OS =~ "el7" ]]; then
+        ## For the RHEL7 nodes
+        export SING_BINDS="$SING_BINDS -B /usr/local/pmix -B /usr/local/hwloc -B /usr/local/ucx-1.13.0 -B /usr/local/ucx-1.10.0 -B /usr/local/ucx-1.8.1 -B /usr/local/spack -B /usr/local/spack_v20d1 -B /usr/local/libevent/ " 
+    elif [[ $HOST_OS =~ "el8" ]]; then
+        ## For the RHEL8 nodes
+        export SING_BINDS="$SING_BINDS -B /usr/local/pmix -B /usr/local/hwloc -B /usr/local/libevent -B /usr/local/spack_v20d1 -B /usr/local/ucx/ " 
+    fi
 
     # only bind /kellogg is individual is part of kellogg group
     export SING_BINDS="$SING_BINDS <%= groups.include?('kellogg') ? "--bind /kellogg/:/kellogg/" : "" %>"
@@ -93,4 +107,9 @@ script:
      <%- if gres_value != "" %>
      - "--gres"
      - "<%= gres_value %>"
+     <%- end %>
+     # If the user requested some kind of constraint, the apply that
+     <%- if constraint != "" %>
+     - "--constraint"
+     - "<%= constraint %>"
      <%- end %>
